@@ -1,0 +1,17 @@
+PN = ebuild-mode
+PV = $(shell sed '/^[ \t]*\* .*[Vv]ersion/!d;s/[^0-9.]*\([0-9.]*\).*/\1/;q' \
+	ChangeLog)
+P = $(PN)-$(PV)
+
+DISTFILE = ebuild-mode.el
+
+
+.PHONY: all dist clean
+
+all:
+
+dist: $(DISTFILE)
+	bzip2 -c $< >$(P).el.bz2
+
+clean:
+	-rm -f *~ *.tmp *.gz *.bz2
